--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-numpy
-scipy==1.9.3
-pandas
-tk
+numpy==2.1.1
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+scipy==1.14.1
+six==1.16.0
+tk==0.1.0
+tzdata==2024.1
